--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,8 +76,8 @@ jobs:
       - name: Run clippy
         run: cargo clippy --no-deps --all-targets --all-features -- -D warnings
 
-  build_and_test:
-    name: Build / cargo-check & cargo-llvmcov
+  unit_test:
+    name: Test / unit
     runs-on: ubuntu-latest
     needs: [style_rustfmt, style_clippy_check]
     steps:
@@ -130,38 +130,112 @@ jobs:
           JDK_CLASSES: ./jdk_classes
         run: |
           cargo llvm-cov clean --workspace
-          cargo llvm-cov nextest --all-features --no-report
-          cargo llvm-cov nextest --all-features --no-report --run-ignored=ignored-only
+          cargo llvm-cov nextest --all-features --no-report -E 'kind(lib)'
           cargo llvm-cov report --codecov --output-path ./target/codecov.json
       - name: Upload Coverage Data
         uses: actions/upload-artifact@v4
         with:
-          name: codecov.json
+          name: codecov-unit.json
+          path: ./target/codecov.json
+
+  integration_test:
+    name: Test / integration
+    runs-on: ubuntu-latest
+    needs: [style_rustfmt, style_clippy_check]
+    steps:
+      - name: Setup Rust
+        run: |
+          rustup update stable \
+            && rustup default stable \
+            && rustup component add llvm-tools-preview
+      - name: Setup Build Tools
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-llvm-cov,cargo-nextest
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: corretto
+      - uses: actions/checkout@v4
+        name: Checkout source code
+      - name: Hash JDK modules
+        id: hash-jdk-modules
+        run: |
+          file_path="${{ env.JAVA_HOME }}/lib/modules"
+          hash=$(sha256sum "$file_path" | awk '{print $1}')
+          echo "hash=${hash}" >> "$GITHUB_OUTPUT"
+      - name: Cache JDK classes
+        id: cache-jdk-classes
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-${{ runner.arch }}-jdk-classes-${{ steps.hash-jdk-modules.outputs.hash }}
+          path: jdk_classes/
+      - name: Extract JDK classes
+        if: steps.cache-jdk-classes.outputs.cache-hit != 'true'
+        run: jimage extract --verbose --dir=./jdk_classes "$JAVA_HOME/lib/modules"
+      - name: Cargo Update
+        run: cargo update --verbose
+      - name: Cache Rust Build Stuff
+        uses: actions/cache@v4
+        with:
+          key: cargo-build-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            cargo-build-
+          path: |
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+      - name: Test
+        env:
+          JDK_CLASSES: ./jdk_classes
+        run: |
+          cargo llvm-cov clean --workspace
+          cargo llvm-cov nextest --all-features --no-report --run-ignored=all -E 'kind(bin)'
+          cargo llvm-cov report --codecov --output-path ./target/codecov.json
+      - name: Upload Coverage Data
+        uses: actions/upload-artifact@v4
+        with:
+          name: codecov-integration.json
           path: ./target/codecov.json
 
   codecov:
     name: Report / Codecov
     runs-on: ubuntu-latest
-    needs: build_and_test
+    needs: [unit_test, integration_test]
     steps:
       - uses: actions/checkout@v4
         name: Checkout source code
-      - name: Download Coverage Data
+      - name: Download Coverage Data (Unit Test)
         uses: actions/download-artifact@v4
         with:
-          name: codecov.json
-      - name: Upload to codecov
+          name: codecov-unit.json
+      - name: Download Coverage Data (Integration Test)
+        uses: actions/download-artifact@v4
+        with:
+          name: codecov-integration.json
+      - name: Upload to codecov (Unit Test)
         uses: codecov/codecov-action@v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          files: codecov.json
+          files: codecov-unit.json
+          flags: unit_tests
+          fail_ci_if_error: true
+      - name: Upload to codecov (Integration Test)
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          files: codecov-integration.json
+          flags: integration_tests
           fail_ci_if_error: true
 
   build_doc:
     name: Docs / Rustdoc
     runs-on: ubuntu-latest
-    needs: build_and_test
+    needs: [unit_test, integration_test]
     steps:
       - name: Setup Rust
         run: |
@@ -205,9 +279,7 @@ jobs:
     name: Deploy / crates.io
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-    needs:
-      - build_and_test
-      - build_doc
+    needs: [ unit_test, integration_test, build_doc ]
     environment:
       name: crates.io
       url: https://crates.io/crates/mokapot
