--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ document-features = "0.2"
 itertools = "0.12"
 petgraph = { version = "0.6", optional = true }
 thiserror = "1.0"
+walkdir = "2"
 zip = { version = "1.1", optional = true, default-features = false, features = [
   "deflate",
 ] }
