--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -9,3 +9,7 @@ ignore:
 flag_management:
   default_rules:
     carryforward: false
+  unit_tests:
+    name: Unit Tests
+  integration_tests:
+    name: Integration Tests
