--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ concurrency:
 
 env:
   CARGO_TERM_COLOR: always
+  JAVA_VERSION: 22
 
 jobs:
   style_rustfmt:
@@ -37,7 +38,7 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          java-version: 22
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: corretto
       - uses: actions/checkout@v4
         name: Checkout source code
@@ -55,7 +56,7 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          java-version: 21
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: corretto
       - uses: actions/checkout@v4
         name: Checkout source code
@@ -133,7 +134,7 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          java-version: 21
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: corretto
       - uses: actions/checkout@v4
         name: Checkout source code
