ci(codecov): add components

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -9,3 +9,14 @@ ignore:
 flag_management:
   default_rules:
     carryforward: false
+
+component_management:
+  individual_components:
+    - component_id: jvm
+      name: JVM
+      paths:
+        - src/jvm/**
+    - component_id: moka_ir
+      name: Moka IR
+      paths:
+        - src/ir/**
