--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = "4.5"
 derive_more = "2.0"
 document-features = "0.2"
 glob = "0.3"
+inkwell = { version = "0.5", features = ["llvm18-0-prefer-dynamic"], optional = true }
 instability = "0.3"
 itertools = "0.14"
 num-traits = "0.2"
