--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -211,7 +211,7 @@ jobs:
     name: Deploy / Latest Rustdoc
     runs-on: ubuntu-latest
     needs: build_doc
-    if: ${{ !startsWith(github.ref, 'refs/pull/') }}
+    if: ${{ github.ref == 'main') }}
     environment:
       name: Latest Docs
       url: https://henryhchchc.github.io/mokapot/mokapot
