--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -211,7 +211,7 @@ jobs:
     name: Deploy / Latest Rustdoc
     runs-on: ubuntu-latest
     needs: build_doc
-    if: ${{ github.ref == 'main' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     environment:
       name: Latest Docs
       url: https://henryhchchc.github.io/mokapot/mokapot
