--- a/crates/mokapot/Cargo.toml
+++ b/crates/mokapot/Cargo.toml
@@ -14,6 +14,7 @@ bitflags = { workspace = true }
 cesu8 = { workspace = true }
 derive_more = { workspace = true, features = ["full"] }
 document-features = { workspace = true }
+inkwell = { workspace = true, features = ["llvm21-1-prefer-dynamic"], optional = true }
 instability = { workspace = true }
 itertools = { workspace = true }
 num-traits = { workspace = true }
@@ -49,6 +50,7 @@ petgraph = ["dep:petgraph"]
 unstable = [
   "unstable-bytecode-generation",
   "unstable-fixed-point-analyses",
+  "unstable-llvm-ir",
   "unstable-moka-ir",
   "unstable-project-analyses",
 ]
@@ -56,6 +58,8 @@ unstable = [
 unstable-bytecode-generation = []
 ## Fixed-point analysis framework
 unstable-fixed-point-analyses = []
+## Enables support for emitting LLVM IR from MokaIR
+unstable-llvm-ir = ["dep:inkwell"]
 ## Moka IR. A register-based, SSA intermediate representation.
 unstable-moka-ir = []
 ## Project-wide analyses APIs
