--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,10 +65,31 @@ jobs:
           args: -D warnings
           token: ${{secrets.GITHUB_TOKEN}}
 
+  feature_test:
+    name: Test / cargo-hack
+    runs-on: ubuntu-latest
+    needs: [style_rustfmt, style_clippy_check]
+    steps:
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+      - name: Setup Build Tools
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-hack
+      - uses: actions/checkout@v4
+        name: Checkout source code
+      - name: Cache Rust Build Stuff
+        uses: Leafwing-Studios/cargo-cache@v2
+      - name: Test all feature combinations
+        run: |
+          cargo hack check --feature-powerset --no-dev-deps
+
   unit_test:
     name: Test / unit
     runs-on: ubuntu-latest
-    needs: [style_rustfmt, style_clippy_check]
+    needs: [style_rustfmt, style_clippy_check, feature_test]
     steps:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@master
@@ -97,7 +118,7 @@ jobs:
   integration_test:
     name: Test / integration
     runs-on: ubuntu-latest
-    needs: [style_rustfmt, style_clippy_check]
+    needs: [style_rustfmt, style_clippy_check, feature_test]
     steps:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@master
