--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -251,6 +251,8 @@ jobs:
     environment:
       name: crates.io
       url: https://crates.io/crates/mokapot
+    permissions:
+      id-token: write
     steps:
       - name: Setup Rust
         run: rustup update && rustup default
@@ -260,7 +262,10 @@ jobs:
         name: Checkout source code
       - name: Cache Rust Build Stuff
         uses: Leafwing-Studios/cargo-cache@v2
+      - name: Authenticate crates.io
+        uses: rust-lang/crates-io-auth-action@v1
+        id: auth
       - name: Publish to crates.io
         run: cargo publish --all-features --verbose
         env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
