--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ zip = { version = "4.0", optional = true, default-features = false, features = [
 
 [dev-dependencies]
 mokapot = { path = ".", features = ["unstable"] }
+clap = { version = "4.5", features = ["derive"] }
 proptest = "1"
 proptest-derive = "0.6"
 walkdir = "2"
