--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,7 +155,7 @@ jobs:
         uses: Leafwing-Studios/cargo-cache@v2
       - name: Test
         env:
-          JDK_CLASSES: ./jdk_classes
+          JDK_CLASSES: $GITHUB_WORKSPACE/jdk_classes
           INTEGRATION_TEST: TRUE
         timeout-minutes: 10
         run: |
