--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -253,6 +253,9 @@ jobs:
       url: https://crates.io/crates/mokapot
     permissions:
       id-token: write
+    strategy:
+      matrix:
+        crate: ["mokapot"]
     steps:
       - name: Setup Rust
         run: rustup update && rustup default
@@ -264,6 +267,7 @@ jobs:
         uses: rust-lang/crates-io-auth-action@v1
         id: auth
       - name: Publish to crates.io
+        working-directory: crates/${{ matrix.crate }}
         run: cargo publish --all-features --verbose
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
