--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,8 @@ jobs:
       - name: Cache Rust Build Stuff
         uses: Leafwing-Studios/cargo-cache@v2
       - name: Test all feature combinations
+        env:
+          RUSTFLAGS: -D unused,unfulfilled_lint_expectations
         run: |
           cargo hack check --feature-powerset --no-dev-deps
 
