ci: Fix multiline command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,8 +66,7 @@ jobs:
       - name: Restore Rust Build Cache
         uses: Leafwing-Studios/cargo-cache@v2
       - name: Run clippy
-        run: |
-          cargo clippy
+        run: cargo clippy
           -D warnings
           --all-features --all-targets --verbose
           --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
