style: Format toml files with tombi

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [workspace]
-members = ["crates/*"]
 resolver = "3"
+members = ["crates/*"]
 
 [workspace.package]
 version = "0.22.0"
 edition = "2024"
-license = "MIT"
 repository = "https://github.com/henryhchchc/mokapot"
-categories = ["parsing", "development-tools"]
-keywords = ["jvm", "java", "analysis", "bytecode"]
+license = "MIT"
+keywords = ["analysis", "bytecode", "java", "jvm"]
+categories = ["development-tools", "parsing"]
