--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ keywords = ["analysis", "bytecode", "java", "jvm"]
 categories = ["development-tools", "parsing"]
 
 [profile.integration-test]
+inherits = "test"
 opt-level = 3
-debug = true
-debug-assertions = true
 lto = true
