--- a/crates/mokapot/Cargo.toml
+++ b/crates/mokapot/Cargo.toml
@@ -10,32 +10,30 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-bitflags = "2.10.0"
-cesu8 = "1.1.0"
-derive_more = { version = "2.0.1", features = ["full"] }
-document-features = "0.2.12"
-instability = "0.3.9"
-itertools = "0.14.0"
-num-traits = "0.2.19"
-petgraph = { version = "0.8.3", optional = true }
-thiserror = "2.0.17"
-trait-gen = "2.0.6"
-walkdir = "2.5.0"
-zip = { version = "7.0.0", default-features = false, features = [
-  "deflate",
-], optional = true }
+bitflags = { workspace = true }
+cesu8 = { workspace = true }
+derive_more = { workspace = true, features = ["full"] }
+document-features = { workspace = true }
+instability = { workspace = true }
+itertools = { workspace = true }
+num-traits = { workspace = true }
+petgraph = { workspace = true, optional = true }
+thiserror = { workspace = true }
+trait-gen = { workspace = true }
+walkdir = { workspace = true }
+zip = { workspace = true, features = ["deflate"], optional = true }
 
 [dev-dependencies]
-clap = { version = "4.5.50", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
 mokapot = { path = ".", features = ["unstable"] }
-proptest = "1.9.0"
-proptest-derive = "0.7.0"
-rand = "0.9.2"
-rayon = "1.11.0"
-walkdir = "2.5.0"
+proptest = { workspace = true }
+proptest-derive = { workspace = true }
+rand = { workspace = true }
+rayon = { workspace = true }
+walkdir = { workspace = true }
 
 [build-dependencies]
-glob = "0.3.3"
+glob = { workspace = true }
 
 [features]
 default = ["jar", "petgraph"]
