--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,7 +173,7 @@ jobs:
           export JDK_CLASSES="${GITHUB_WORKSPACE}/jdk_classes"
           cargo llvm-cov clean --workspace
           cargo llvm-cov nextest --cargo-profile=integration-test --all-features --no-report --run-ignored=all -E 'kind(test)'
-          cargo llvm-cov report --codecov --output-path ./target/codecov-integration.json
+          cargo llvm-cov report --profile=integration-test --codecov --output-path ./target/codecov-integration.json
       - name: Upload Coverage Data
         uses: actions/upload-artifact@v6
         with:
