--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
   unit_test:
     name: Test / unit
     runs-on: ubuntu-latest
-    needs: [style_rustfmt, style_clippy_check, feature_test]
+    needs: [style_rustfmt, style_clippy_check]
     steps:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@master
@@ -130,7 +130,7 @@ jobs:
   integration_test:
     name: Test / integration
     runs-on: ubuntu-latest
-    needs: [style_rustfmt, style_clippy_check, feature_test]
+    needs: [style_rustfmt, style_clippy_check]
     steps:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@master
@@ -215,7 +215,7 @@ jobs:
   build_doc:
     name: Docs / Rustdoc
     runs-on: ubuntu-latest
-    needs: [unit_test, integration_test]
+    needs: [unit_test]
     steps:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@master
@@ -241,7 +241,7 @@ jobs:
   publish_latest_docs:
     name: Deploy / Latest Rustdoc
     runs-on: ubuntu-latest
-    needs: build_doc
+    needs: [feature_test, unit_test, integration_test, build_doc]
     if: ${{ github.ref == 'refs/heads/main' }}
     environment:
       name: Latest Docs
@@ -259,7 +259,7 @@ jobs:
     name: Deploy / crates.io
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-    needs: [unit_test, integration_test, build_doc]
+    needs: [feature_test, unit_test, integration_test, build_doc]
     environment:
       name: crates.io
       url: https://crates.io/crates/mokapot
