--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,11 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
-      - uses: actions/checkout@v6
-        name: Checkout source code
+          components: rustfmt
+      - name: Checkout source code
+        uses: actions/checkout@v4
       - name: Check code formatting with rustfmt
-        uses: actions-rust-lang/rustfmt@v1
+        run: cargo fmt --all -- --check
 
   style_clippy_check:
     name: Style / clippy
@@ -51,6 +52,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
+          components: clippy
       - name: Setup Checking Tools
         uses: taiki-e/install-action@v2
         with:
@@ -60,21 +62,24 @@ jobs:
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: corretto
-      - uses: actions/checkout@v6
-        name: Checkout source code
+      - name: Checkout source code
+        uses: actions/checkout@v6
       - name: Cache Rust Build Stuff
         uses: Leafwing-Studios/cargo-cache@v2
         with:
           sweep-cache: true
       - name: Run clippy
-        run: cargo clippy
-          --all-features --all-targets --verbose
-          -- -D warnings
-          --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
+        run: |
+          cargo clippy \
+            --all-features --all-targets --verbose \
+            --message-format=json \
+            -- -D warnings | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
+        continue-on-error: true
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: rust-clippy-results.sarif
+          wait-for-processing: true
 
   feature_test:
     name: Test / cargo-hack
@@ -89,8 +94,8 @@ jobs:
         uses: taiki-e/install-action@v2
         with:
           tool: cargo-hack
-      - uses: actions/checkout@v6
-        name: Checkout source code
+      - name: Checkout source code
+        uses: actions/checkout@v6
       - name: Cache Rust Build Stuff
         uses: Leafwing-Studios/cargo-cache@v2
         with:
@@ -115,8 +120,8 @@ jobs:
         uses: taiki-e/install-action@v2
         with:
           tool: cargo-llvm-cov,cargo-nextest
-      - uses: actions/checkout@v6
-        name: Checkout source code
+      - name: Checkout source code
+        uses: actions/checkout@v6
       - name: Cache Rust Build Stuff
         uses: Leafwing-Studios/cargo-cache@v2
         with:
@@ -151,8 +156,8 @@ jobs:
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: corretto
-      - uses: actions/checkout@v6
-        name: Checkout source code
+      - name: Checkout source code
+        uses: actions/checkout@v6
       - name: Hash JDK modules
         id: hash-jdk-modules
         run: |
@@ -192,8 +197,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [unit_test, integration_test]
     steps:
-      - uses: actions/checkout@v6
-        name: Checkout source code
+      - name: Checkout source code
+        uses: actions/checkout@v6
       - name: Download Coverage Data (Unit Test)
         uses: actions/download-artifact@v7
         with:
@@ -228,8 +233,8 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: nightly
-      - uses: actions/checkout@v6
-        name: Checkout source code
+      - name: Checkout source code
+        uses: actions/checkout@v6
       - name: Build docs
         env:
           RUSTDOCFLAGS: --cfg docsrs
@@ -239,8 +244,8 @@ jobs:
           chmod -v -R +rX "target/doc/" | while read -r line; do
             echo "::info title=Fixed file permissions::$line"
           done
-      - uses: actions/upload-pages-artifact@v4
-        name: Upload docs as github pages artifact
+      - name: Upload docs as github pages artifact
+        uses: actions/upload-pages-artifact@v4
         with:
           name: mokapot-docs
           path: target/doc
@@ -257,8 +262,8 @@ jobs:
       pages: write
       id-token: write
     steps:
-      - uses: actions/deploy-pages@v4
-        name: Deploy docs to github pages
+      - name: Deploy docs to github pages
+        uses: actions/deploy-pages@v4
         with:
           artifact_name: mokapot-docs
 
@@ -277,9 +282,11 @@ jobs:
         crate: ["mokapot"]
     steps:
       - name: Setup Rust
-        run: rustup update && rustup default
-      - uses: actions/checkout@v6
-        name: Checkout source code
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+      - name: Checkout source code
+        uses: actions/checkout@v6
       - name: Authenticate crates.io
         uses: rust-lang/crates-io-auth-action@v1
         id: auth
