--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,14 +4,41 @@ on:
   push:
     tags:
       - v**
+  workflow_dispatch:
 
 permissions:
   id-token: write
 
 jobs:
+  wait_for_tests:
+    name: Wait for Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait for Tests workflow
+        uses: lewagon/wait-on-check-action@v1.4.1
+        with:
+          ref: ${{ github.ref }}
+          check-name: "Coverage Report"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 10
+
+  wait_for_docs:
+    name: Wait for Documentation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait for Documentation workflow
+        uses: lewagon/wait-on-check-action@v1.3.4
+        with:
+          ref: ${{ github.ref }}
+          check-name: "Build Rustdoc"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 10
+
   publish_to_crate_io:
     name: Publish to crates.io
     runs-on: ubuntu-latest
+    needs: [wait_for_tests, wait_for_docs]
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     environment:
       name: crates.io
       url: https://crates.io/crates/mokapot
