--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,15 @@
-name: Tests
+name: CI
 
 on:
-  workflow_run:
-    workflows: ["Code Quality"]
-    types:
-      - completed
+  push:
     branches:
       - main
+    paths-ignore:
+      - docs/**
+      - "**/*.md"
+      - "LICENSE"
+    tags:
+      - v**
   pull_request:
     paths-ignore:
       - docs/**
@@ -14,7 +17,7 @@ on:
       - "LICENSE"
 
 concurrency:
-  group: test-${{ github.ref }}
+  group: ${{ github.ref }}
   cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 env:
@@ -24,10 +27,70 @@ permissions:
   checks: write
 
 jobs:
-  feature_test:
-    name: Feature Combinations
+  # ====================
+  # Code Quality
+  # ====================
+  rustfmt:
+    name: Code Quality / rustfmt
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' || github.event.workflow_run.conclusion == 'success' }}
+    steps:
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          components: rustfmt
+      - name: Checkout source code
+        uses: actions/checkout@v4
+      - name: Check code formatting with rustfmt
+        run: cargo fmt --all -- --check
+
+  clippy:
+    name: Code Quality / clippy
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+    steps:
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          components: clippy
+      - name: Setup Checking Tools
+        uses: taiki-e/install-action@v2
+        with:
+          tool: clippy-sarif,sarif-fmt
+      - name: Setup JDK
+        uses: actions/setup-java@v5
+        with:
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: corretto
+      - name: Checkout source code
+        uses: actions/checkout@v6
+      - name: Cache Rust Build Stuff
+        uses: Leafwing-Studios/cargo-cache@v2
+        with:
+          sweep-cache: true
+      - name: Run clippy
+        run: |
+          cargo clippy \
+            --all-features --all-targets --verbose \
+            --message-format=json \
+            -- -D warnings | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
+        continue-on-error: true
+      - name: Upload analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v4
+        with:
+          sarif_file: rust-clippy-results.sarif
+          wait-for-processing: true
+
+  # ====================
+  # Tests
+  # ====================
+  feature_test:
+    name: Tests / Feature Combinations
+    runs-on: ubuntu-latest
+    needs: [rustfmt, clippy]
     steps:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@master
@@ -50,9 +113,9 @@ jobs:
           cargo hack check --feature-powerset --no-dev-deps
 
   unit_test:
-    name: Unit Tests
+    name: Tests / Unit Tests
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' || github.event.workflow_run.conclusion == 'success' }}
+    needs: [rustfmt, clippy]
     steps:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@master
@@ -81,9 +144,9 @@ jobs:
           path: ./target/codecov-unit.json
 
   integration_test:
-    name: Integration Tests
+    name: Tests / Integration Tests
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' || github.event.workflow_run.conclusion == 'success' }}
+    needs: [rustfmt, clippy]
     steps:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@master
@@ -136,7 +199,7 @@ jobs:
           path: ./target/codecov-integration.json
 
   codecov:
-    name: Coverage Report
+    name: Tests / Coverage Report
     runs-on: ubuntu-latest
     needs: [unit_test, integration_test]
     steps:
@@ -166,3 +229,81 @@ jobs:
           files: codecov-integration.json
           flags: integration_tests
           fail_ci_if_error: true
+
+  # ====================
+  # Documentation
+  # ====================
+  build_doc:
+    name: Docs / Build Rustdoc
+    runs-on: ubuntu-latest
+    needs: [unit_test]
+    steps:
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+      - name: Checkout source code
+        uses: actions/checkout@v6
+      - name: Build docs
+        env:
+          RUSTDOCFLAGS: --cfg docsrs
+        run: cargo doc --all-features --no-deps --verbose
+      - name: Fix file permissions
+        run: |
+          chmod -v -R +rX "target/doc/" | while read -r line; do
+            echo "::info title=Fixed file permissions::$line"
+          done
+      - name: Upload docs as github pages artifact
+        uses: actions/upload-pages-artifact@v4
+        with:
+          name: mokapot-docs
+          path: target/doc
+
+  deploy_docs:
+    name: Docs / Deploy to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: [feature_test, unit_test, integration_test, build_doc]
+    if: ${{ github.ref == 'refs/heads/main' }}
+    environment:
+      name: Latest Docs
+      url: https://henryhchchc.github.io/mokapot/mokapot
+    permissions:
+      pages: write
+      id-token: write
+    steps:
+      - name: Deploy docs to github pages
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: mokapot-docs
+
+  # ====================
+  # Publish
+  # ====================
+  publish:
+    name: Deploy / crates.io
+    runs-on: ubuntu-latest
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    needs: [feature_test, unit_test, integration_test, build_doc]
+    environment:
+      name: crates.io
+      url: https://crates.io/crates/mokapot
+    permissions:
+      id-token: write
+    strategy:
+      matrix:
+        crate: ["mokapot"]
+    steps:
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+      - name: Checkout source code
+        uses: actions/checkout@v6
+      - name: Authenticate crates.io
+        uses: rust-lang/crates-io-auth-action@v1
+        id: auth
+      - name: Publish to crates.io
+        working-directory: crates/${{ matrix.crate }}
+        run: cargo publish --all-features --verbose
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
