--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,16 +73,26 @@ jobs:
           sweep-cache: true
       - name: Run clippy
         run: |
+          set -o pipefail
           cargo clippy \
-            --all-features --all-targets --verbose \
+            --all-features --all-targets \
             --message-format=json \
-            -- -D warnings | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
+            -- -D warnings 2>&1 | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
+          echo "CLIPPY_EXIT_CODE=${PIPESTATUS[0]}" >> "$GITHUB_ENV"
         continue-on-error: true
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v4
+        if: always()
         with:
           sarif_file: rust-clippy-results.sarif
           wait-for-processing: true
+      - name: Check clippy result
+        if: always()
+        run: |
+          if [ "$CLIPPY_EXIT_CODE" != "0" ]; then
+            echo "Clippy found issues (exit code: $CLIPPY_EXIT_CODE)"
+            exit $CLIPPY_EXIT_CODE
+          fi
 
   # ====================
   # Tests
